Ejercicios con clases, metodos y validaciones

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "interfaz": "ts-node 02-ejercicios-interfaces.ts",
     "tarea-interfaz": "ts-node src/interfaces/04-ejercicios-interfaces-tarea.ts",
     "main": "ts-node src/main.ts",
+    "main-tarea": "ts-node src/main-tarea-metodos.ts",
+    "main-valid": "ts-node src/main-validaciones.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
